--- a/index.html
+++ b/index.html
@@ -37,7 +37,29 @@
 
     <div id="div_lex_intro">
         <div class="texts">
-            
+                        <div class="lg_en">
+                This test consists of about 60 trials, in each of which you will see a string of letters. Your task is
+                to decide whether this is an existing English word or not. If you think it is an existing English word,
+                you click on "yes",
+                and if
+                you
+                think it is not an existing English word, you click on "no".
+                <br /><br />
+                If you are sure that the word exists, even though you don’t know its exact meaning, you may still
+                respond "yes". But if you are not sure if it is an existing word, you should respond "no".
+                <br /><br />
+                In this experiment, we use British English rather than American English spelling. For example: "realise"
+                instead of "realize"; "colour" instead of "color", and so on. Please don’t let this confuse you. This
+                experiment is not
+                about
+                detecting such subtle spelling differences anyway.
+                <br /><br />
+                You have as much time as you like for each decision. This part of the experiment will take about 5
+                minutes.
+                <br /><br />
+                If everything is clear, you can now start the experiment.
+                <br /><br />
+            </div>
             <div class="lg_ch" id="ch_firstscreen">
                 <img id="intro_ch" src=''
                     alt="(Warning: Missing image! Displaying HTML characters instead.) 在下一页，您将会看到90个看上去像“汉字”的字，当中只有一些是真正存在的汉字。您需要对每一个字做出判断，如果您认为该字是在中文里存在的(即使您不能够明确地说出该字的意思)或者是您知道该字的话，请勾选左上方的“是汉字”选项 。您无需快速回答每一道问题，但请您根据您的一反应来作答，不用过度的犹豫。请在没有任何外来帮忙的情况下独立完成此测试（不要使用任何汉语词典！）。所有的字皆为简体中文。下方的图片为作答例子。">
