--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span style="color:grey">-----------------------------------------------------------------------</span>
         </div>
         <br /><br />
-        <button class="bttn" onclick="select_lg();">START</button>
+        <button class="bttn" onclick="select_lg();">>></button>
         <br /><br />
         <i>For information and references see <a href="https://github.com/ClorisT2023/"
                 target="_blank">https://github.com/ClorisT2023/</a></i>
