--- a/index.html
+++ b/index.html
@@ -39,52 +39,25 @@
         <div class="texts">
             <div class="lg_ch" id="ch_firstscreen">
                 <img id="intro_ch" src=''
-                    alt="(Warning: Missing image! Displaying HTML characters instead.) 在下一页，您将会看到90个看上去像“汉字”的字，当中只有一些是真正存在的汉字。您需要对每一个字做出判断，如果您认为该字是在中文里存在的(即使您不能够明确地说出该字的意思)或者是您知道该字的话，请勾选左上方的“是汉字”选项 。您无需快速回答每一道问题，但请您根据您的一反应来作答，不用过度的犹豫。请在没有任何外来帮忙的情况下独立完成此测试（不要使用任何汉语词典！）。所有的字皆为简体中文。下方的图片为作答例子。">
-                <div class="lg_ch2">
-                    On the next page, you are going to be shown 90 characters that look “Chinese”. Only some of them are
-                    real Chinese characters. You have to decide for each item whether it is a real Chinese character or
-                    not. Please select the
-                    top-left
-                    option <img class="question_class" src='' alt="是汉字 (error note: missing image!)"> if you know the
-                    character or if you believe that the item is a real Chinese character, even if you may not know its
-                    precise meaning. You do not need
-                    to
-                    respond rapidly, but please give your first impression, without any
-                    outside aids (i.e., do not consult a dictionary!). Each character will be presented in Simplified
-                    Chinese. A sample of what the test looks like is shown below.
-                </div>
-                <br />
+                    alt="(Warning: Missing image! Displaying HTML characters instead.) 
+                    XXX
+                    <br />
+                    在下一页，您将会看到90个看上去像“汉字”的字，当中只有一些是真正存在的汉字。您需要对每一个字做出判断，如果您认为该字是在中文里存在的(即使您不能够明确地说出该字的意思)或者是您知道该字的话，请勾选左上方的“是汉字”选项 。您无需快速回答每一道问题，但请您根据您的一反应来作答，不用过度的犹豫。请在没有任何外来帮忙的情况下独立完成此测试（不要使用任何汉语词典！）。所有的字皆为简体中文。下方的图片为作答例子。">
+                    <br />
                 <div id="example_screen">
-                    <br />
                     <img id="intro_ch_short1" src='' alt='如果您认为该字为汉字,请勾选左上方"是汉字"的选项。(error note: missing image!)'>
-                    <br />
-                    <div class="lg_ch2">
-                        Please select the top-left option <img class="question_class" src='' alt="是汉字"> if you think the
-                        item is a real Chinese character.
-                    </div>
                     <br />
                     <ul id='ch_list_examples' class="lists checkbox"></ul>
                 </div>
                 <br />
                 <div style="text-align:center">
                     <img id="intro_ch_bottom" src='' alt='当你认为"家"和"桝"是汉字 (error note: missing image!)'>
-                    <div class="lg_ch2">
-                        (When you think the characters
-                        <img id="corr1" src='' alt='家'>
-                        and
-                        <img id="corr4" src='' alt='桝'>
-                        are real Chinese characters.)
-                    </div>
                 </div>
                 <div id="loading_id"><br /><br />Please wait... (loading images...)</div>
             </div>
         </div>
-
         <br /><br />
-        <button id="startbuttn" class="bttn" onclick="lexmain();">
-            <span class="lg_ch"> >> </span>
-        </button>
-        <br /><br />
+        <button id="startbuttn" class="bttn" onclick="lexmain();">>></button>
     </div>
 
     <div id="div_lex_main">
