--- a/index.html
+++ b/index.html
@@ -31,19 +31,16 @@
         <br /><br />
         <button class="bttn" onclick="select_lg();">>></button>
         <br /><br />
-        <i>For information and references see <a href="https://github.com/ClorisT2023/"
+        <i>For information and references, please see <a href="https://github.com/ClorisT2023/"
                 target="_blank">https://github.com/ClorisT2023/</a></i>
     </div>
 
     <div id="div_lex_intro">
         <div class="texts">
             <div class="lg_ch" id="ch_firstscreen">
-                <img id="intro_ch" src=''
-                    alt="(Warning: Missing image! Displaying HTML characters instead.) 
-                    XXX
-                    <br />
-                    在下一页，您将会看到90个看上去像“汉字”的字，当中只有一些是真正存在的汉字。您需要对每一个字做出判断，如果您认为该字是在中文里存在的(即使您不能够明确地说出该字的意思)或者是您知道该字的话，请勾选左上方的“是汉字”选项 。您无需快速回答每一道问题，但请您根据您的一反应来作答，不用过度的犹豫。请在没有任何外来帮忙的情况下独立完成此测试（不要使用任何汉语词典！）。所有的字皆为简体中文。下方的图片为作答例子。">
-                    <br />
+                <br /><br />
+                在下一页，您将会看到90个看上去像“汉字”的字，当中只有一些是真正存在的汉字。您需要对每一个字做出判断，如果您认为该字是在中文里存在的(即使您不能够明确地说出该字的意思)或者是您知道该字的话，请勾选左上方的“是汉字”选项 。您无需快速回答每一道问题，但请您根据您的一反应来作答，不用过度的犹豫。请在没有任何外来帮忙的情况下独立完成此测试（不要使用任何汉语词典！）。所有的字皆为简体中文。下方的图片为作答例子。">
+                <br /><br />
                 <div id="example_screen">
                     <img id="intro_ch_short1" src='' alt='如果您认为该字为汉字,请勾选左上方"是汉字"的选项。(error note: missing image!)'>
                     <br />
@@ -62,13 +59,10 @@
 
     <div id="div_lex_main">
         <button onclick="lexclick('no');" class="lexresp_buttons lexresp_left">
-            <span class="lg_en">no</span>
-            <span class="lg_de">nein</span>
-            <span class="lg_nl">nee</span>
+            <span class="lg_ch">否</span>
         </button>
         <button onclick="lexclick('yes');" class="lexresp_buttons lexresp_right">
-            <span class="lg_en">yes</span>
-            <span class="lg_de lg_nl">ja</span>
+            <span class="lg_ch">是</span>
         </button>
         <p id="lexstim"></p>
     </div>
