--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             </div>
         </div>
         <br /><br />
-        <button id="startbuttn" class="bttn" onclick="lexmain();">>></button>
+        <button id="startbuttn" class="bttn" onclick="lexmain();">
+            <span class="lg_ch"> >> </span>
+        </button>
     </div>
 
     <div id="div_lex_main">
