--- a/index.html
+++ b/index.html
@@ -38,19 +38,13 @@
     <div id="div_lex_intro">
         <div class="texts">
             <div class="lg_ch" id="ch_firstscreen">
+                <img id="intro_ch" src='' alt="
+                在下一頁，您將會看到90個看上去像「漢字」的字，當中只有一些是真正存在的漢字。您需要對每一個字做出判斷，
+                如果您認為該字是在中文裡存在的(即使您不能夠明確地說出該字的意思)或者是您知道該字的話，
+                請選擇「是」選項，反之，請選擇「否」。您無需快速回答每一道問題，但請您根據您的第一反應來作答，不用過度的猶豫。
+                請獨立完成此測試（不要使用任何漢語詞典！）。所有的字皆為繁體中文。下方的圖片為作答例子。">
                 <br /><br />
-                在下一页，您将会看到90个看上去像“汉字”的字，当中只有一些是真正存在的汉字。您需要对每一个字做出判断，如果您认为该字是在中文里存在的(即使您不能够明确地说出该字的意思)或者是您知道该字的话，请勾选左上方的“是汉字”选项 。您无需快速回答每一道问题，但请您根据您的一反应来作答，不用过度的犹豫。请在没有任何外来帮忙的情况下独立完成此测试（不要使用任何汉语词典！）。所有的字皆为简体中文。下方的图片为作答例子。">
-                <br /><br />
-                <div id="example_screen">
-                    <img id="intro_ch_short1" src='' alt='如果您认为该字为汉字,请勾选左上方"是汉字"的选项。(error note: missing image!)'>
-                    <br />
-                    <ul id='ch_list_examples' class="lists checkbox"></ul>
-                </div>
-                <br />
-                <div style="text-align:center">
-                    <img id="intro_ch_bottom" src='' alt='当你认为"家"和"桝"是汉字 (error note: missing image!)'>
-                </div>
-                <div id="loading_id"><br /><br />Please wait... (loading images...)</div>
+                <div id="loading_id"><br /><br />請等候 ... ... (加載中)</div>
             </div>
         </div>
         <br /><br />
