--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
             </div>
         </div>
         <br /><br />
-        <button id="startbuttn" class="bttn" onclick="lexmain();">
-            <span class="lg_ch"> >> </span>
-        </button>
+        <button id="nextButton">Next Page</button>
     </div>
 
     <div id="div_lex_main">
