--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             </div>
         </div>
         <br /><br />
-        <button id="nextButton">Next Page</button>
+        <button id="nextButton">
+             <span class="lg_ch">>></span>
+        </button>
     </div>
 
     <div id="div_lex_main">
