--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <br /><br />
         </div>
         <br /><br />
-        <button id="startbuttn" class="bttn" onclick="lexmain();">
+        <button id="startButton" class="bttn" onclick="goToNextPage();">
             <span> >> </span>
         </button>
         <br /><br />
