--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <div style="display: inline-block; text-align: left;">
             <div style="text-align: center;font-variant: small-caps;">Welcome to LexTALE Test (Tranditional Chinese).</div>
             <span style="color:grey">-----------------------------------------------------------------------</span>
+            <input type="radio" id='ch1_id' name="lang" value="ch1">
+            <label for="ch1_id">Traditional Chinese</label>
             <br /><br />
             <label style="text-align: left;font-variant: small-caps;">Subject Number:</label>
             <input type="text" id="inputField" name="inputField" placeholder="Enter your subject number here">
