--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <br /><br />
         </div>
         <br /><br />
-        <button id="startButton" class="bttn" ;">
-            <span> >> </span>
+        <button id="startbuttn" class="bttn" onclick="lexmain();">
+            <span class="lg_ch"> >> </span>
         </button>
         <br /><br />
     </div>            
