--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div style="display: inline-block; text-align: left;">
             <div style="text-align: center;font-variant: small-caps;">Welcome to LexTALE Test (Tranditional Chinese).</div>
             <span style="color:grey">-----------------------------------------------------------------------</span>
+            <br />
             <input type="radio" id='ch1_id' name="lang" value="ch1">
             <label for="ch1_id">Traditional Chinese</label>
             <br /><br />
@@ -40,10 +41,20 @@
     <div id="div_lex_intro">
         <div class="texts">
             <br /><br />
-            在下一頁，您將會看到90個看上去像「漢字」的字，當中只有一些是真正存在的漢字。您需要對每一個字做出判斷，
-            如果您認為該字是在中文裡存在的(即使您不能夠明確地說出該字的意思)或者是您知道該字的話，
-            請選擇「是」選項，反之，請選擇「否」。您無需快速回答每一道問題，但請您根據您的第一反應來作答，不用過度的猶豫。
-            請獨立完成此測試（不要使用任何漢語詞典！）。所有的字皆為繁體中文。下方的圖片為作答例子。
+            本測試包括約90個看上去像「漢字」的字，當中只有一些是真正存在的漢字。
+            <br /><br />
+            每次試驗中您都會看到一個字，您的任務是判斷該字是否在中文裡存在（即使您不能夠明確地說出該字的意思）。
+            如果您認為它是一個現有的中文單字，您就點擊「是」；如果您認為它不是一個現有的中文單字，您就點擊「否」。
+            <br /><br />
+            如果您確定該字存在，即使您不知道它的確切含義，您仍然可以回復 "是"。但如果您不確定它是否是一個現存的單字，
+            則應回答 "否"。
+            <br /><br />
+            請注意：如果在您點擊「是」或「否」之後，下一個項目可能需要一段時間才能出現。在這種情況下，請不要再次點擊，
+            而是等待新項目出現。
+            <br /><br />
+            每次做決定的時間不限，您無需快速回答每一道問題，請您根據您的反應來作答，不用過度的猶豫。
+            <br /><br />
+            如果一切正常，就可以開始實驗了。
             <br /><br />
         </div>
         <br /><br />
