--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             <br /><br />
         </div>
         <br /><br />
-        <button id="startbuttn" class="bttn" onclick="lexmain_ch();">>></button>
+        <button id="startbuttn" class="bttn" onclick="lexmain();">
+            <span class="lg_ch"> >> </span>
+        </button>
         <br /><br />
     </div>            
 
