--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
             <br /><br />
         </div>
         <br /><br />
-        <button class="bttn" onclick="select_lg();">>></button>
-        <br /><br />
+        <button id="startbuttn" class="bttn" onclick="lexmain();">
+            <span class="lg_en lg_de lg_nl">OK</span>
+            <span class="lg_ch"> >> </span>
+        </button>
     </div>            
 
     <div id="div_lexch_main">
