--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div id="div_lex_intro">
         <div class="texts">
-            <div class="lg_ch">
+            <div class="lg_en">
             本測試包括約90個看上去像「漢字」的字，當中只有一些是真正存在的漢字。
             <br /><br />
             每次試驗中您都會看到一個字，您的任務是判斷該字是否在中文裡存在（即使您不能夠明確地說出該字的意思）。
@@ -55,11 +55,14 @@
             <br /><br />
             </div>
         </div>
+
         <br /><br />
         <button id="startbuttn" class="bttn" onclick="lexmain();">
+            <span class="lg_en lg_de lg_nl">>></span>
             <span class="lg_ch"> >> </span>
         </button>
-    </div>            
+        <br /><br />
+    </div>
 
     <div id="div_lexch_main">
         <button onclick="lexclick('no');" class="lexresp_buttons lexresp_left">
