--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p id="lexstim"></p>
     </div>
 
-<!--     <div id="div_lexch_main" style="margin: auto;">
+    <div id="div_lexch_main" style="margin: auto;">
         <div class="lg_ch texts">
             <img id="intro_ch_short2" src=''
                 alt='如果您认为该字为汉字,请勾选左上方"是汉字"的选项。总共有90个汉字，请在提交答案前对所有汉字作出判断。(error note: missing image!)'>
@@ -103,7 +103,7 @@
             <br />
         </div>
     </div>
- -->
+
     <div id="div_end">
         <br /><br />
         <div style="text-align: center;font-variant: small-caps;">測試已完成。</div>
