--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <br /><br />
     </div>
     
-    <div id="div_lex_main">
+<!--     <div id="div_lex_main">
         <button onclick="lexclick('no');" class="lexresp_buttons lexresp_left">
             <span class="lg_en">否</span>
         </button>
@@ -71,8 +71,20 @@
             <span class="lg_en">是</span>
         </button>
         <p id="lexstim"></p>
-    </div>
+    </div> -->
 
+    <div id="div_lex_main">
+        <div id="imageContainer">
+            <img id="leximage" src="" alt="" />
+        </div>
+        <button onclick="lexclick('no');" class="lexresp_buttons lexresp_left">
+            <span class="lg_en">否</span>
+        </button>
+        <button onclick="lexclick('yes');" class="lexresp_buttons lexresp_right">
+            <span class="lg_en">是</span>
+        </button>
+    </div>
+    
     <div id="div_lexch_main" style="margin: auto;">
         <div class="lg_ch texts">
             <img id="intro_ch_short2" src=''
