--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <br /><br />
     </div>
     
-<!--     <div id="div_lex_main">
+    <div id="div_lex_main" style="margin: auto;">
         <button onclick="lexclick('no');" class="lexresp_buttons lexresp_left">
             <span class="lg_en">否</span>
         </button>
@@ -71,9 +71,9 @@
             <span class="lg_en">是</span>
         </button>
         <p id="lexstim"></p>
-    </div> -->
+    </div>
 
-    <div id="div_lex_main">
+<!--     <div id="div_lex_main">
         <div id="imageContainer">
             <img id="leximage" src="" alt="" />
         </div>
@@ -83,7 +83,7 @@
         <button onclick="lexclick('yes');" class="lexresp_buttons lexresp_right">
             <span class="lg_en">是</span>
         </button>
-    </div>
+    </div> -->
     
     <div id="div_lexch_main" style="margin: auto;">
         <div class="lg_ch texts">
